other prods alignment fix

--- a/wp-content/themes/HighendWP-child/less/style.less
+++ b/wp-content/themes/HighendWP-child/less/style.less
@@ -207,6 +207,9 @@ button, a.vc_btn3{
 }
 
 .vc_pageable-slide-wrapper{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 	&>p{
 		display: none;
 	}
